objects/ssot__Visit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActualVisitEndTime__c</fullName>
        <label>Actual Visit End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActualVisitLatitude__c</fullName>
        <label>Actual Visit Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualVisitLongitude__c</fullName>
        <label>Actual Visit Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualVisitStartTime__c</fullName>
        <label>Actual Visit Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessUnitId__c</fullName>
        <label>Business Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DistributionIssueCount__c</fullName>
        <label>Distribution Issue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUOMId__c</fullName>
        <label>Duration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasDistributionIssues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Distribution Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasOutOfStockIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Of Stock Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Visit Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAllDayVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Day Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutOfStockIssueCount__c</fullName>
        <label>Out Of Stock Issue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutOfStockRateFocusArea__c</fullName>
        <label>Out Of Stock Rate Focus Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerfectStoreIndexScoreNumber__c</fullName>
        <label>Perfect Store Index Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PerfectStoreQuotientNumber__c</fullName>
        <label>Perfect Store Quotient</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PlaceRecordId__c</fullName>
        <label>Place Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlaceRecordObject__c</fullName>
        <label>Place Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedVisitDate__c</fullName>
        <label>Planned Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedVisitEndTime__c</fullName>
        <label>Planned Visit End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedVisitStartTime__c</fullName>
        <label>Planned Visit Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Priority__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductDistributionRateFocusArea__c</fullName>
        <label>Product Distribution Rate Focus Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductDistributionRate__c</fullName>
        <label>Product Distribution Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Purpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedVisitId__c</fullName>
        <label>Related Visit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceContextObject__c</fullName>
        <label>Source Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceContextRecordId__c</fullName>
        <label>Source Context Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonText__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitNoteText__c</fullName>
        <label>Visit Note Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitTypeRecordId__c</fullName>
        <label>Visit Type Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitTypeRecordObject__c</fullName>
        <label>Visit Type Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Visit_AccountId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit_AccountId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Visit_AccountId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>Visit_AccountId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Visit_PlaceRecordId_map_Address_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit_PlaceRecordId_map_Address_Id_N_1</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>Visit_PlaceRecordId_map_Address_Id_N_1</relationshipLabel>
        <relationshipName>Visit_PlaceRecordId_map_Address_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Visit_PlaceRecordId_map_Location_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit_PlaceRecordId_map_Location_Id_N_1</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>Visit_PlaceRecordId_map_Location_Id_N_1</relationshipLabel>
        <relationshipName>Visit_PlaceRecordId_map_Location_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Visit_RelatedVisitId_map_Visit_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit_RelatedVisitId_map_Visit_Id_N_1</label>
        <referenceTo>ssot__Visit__dlm</referenceTo>
        <relationshipLabel>Visit_RelatedVisitId_map_Visit_Id_N_1</relationshipLabel>
        <relationshipName>Visit_RelatedVisitId_map_Visit_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Visit_VisitorRecordId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit_VisitorRecordId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Visit_VisitorRecordId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Visit_VisitorRecordId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__VisitorRecordId__c</fullName>
        <label>Visitor Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitorRecordObject__c</fullName>
        <label>Visitor Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009521141_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit_DurationUOMId_map_UnitOfMeasur_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>Visit_DurationUOMId_map_UnitOfMeasur_rel</relationshipLabel>
        <relationshipName>rel_1702009521141_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702450762640_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit_PlaceRecordId_map_RetailStore__rel</label>
        <referenceTo>ssot__RetailStore__dlm</referenceTo>
        <relationshipLabel>Visit_PlaceRecordId_map_RetailStore__rel</relationshipLabel>
        <relationshipName>rel_1702450762640_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1740712386182_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit_VisitorRecordId_map_WorkResour_rel</label>
        <referenceTo>ssot__WorkResource__dlm</referenceTo>
        <relationshipLabel>Visit_VisitorRecordId_map_WorkResour_rel</relationshipLabel>
        <relationshipName>rel_1740712386182_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>